--- a/udagram-reverse-proxy/nginx.conf
+++ b/udagram-reverse-proxy/nginx.conf
@@ -12,11 +12,11 @@ http {
     sendfile on;
 
     upstream user {
-        server udagram-api-user:8080;
+        server udagram-api-user-service:8080;
     }
 
     upstream feed {
-        server udagram-api-feed:8080;
+        server udagram-api-feed-service:8080;
     }
     
     proxy_set_header   Host $host;
